[package]
name = "faas-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde", "clock"] }
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = {version="0.8.6", features=["runtime-tokio-native-tls", "sqlite"]}
tokio = { version = "1.48.0", features = ["full"] }
wasmtime = "38.0.4"
